overflow  fix

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -3,7 +3,6 @@
 * {
   margin: 0;
   font-family: "Nunito Sans", sans-serif;
-  overflow: hidden;
 }
 
 #login-background {
@@ -23,4 +22,10 @@
 .nav-pills .show > .nav-link {
   color: var(--bs-primary) !important;
   background-color: transparent;
+}
+
+#sidebar {
+  align-self: flex-start;
+  position: sticky;
+  top: 0px;
 }
